Add swagger/controller
